@@ -1,15 +1,8 @@
-Do a CD lookup using gnome-media's CDDB library
-
-For the future, add a button to submit the current titles
-
-Play/stop track. Not a full CD player, but simple play/stop should be
-enough.
-
-Maybe add a button to start the users CD player (as determined by
-g-v-m keys?)
-
 Remove Reread button from dialog?
 
 Use put icon in hicolor theme and stop loading it manually
 
 Put SjExtractor and SjMetadata classes in a shared library
+
+Abstract the preferences into a funky object with signals and stuff, so that
+multiple components don't have to watch gconf.
