@@ -1,5 +1,15 @@
 2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* src/sound-juicer.h:
+	* src/sj-main:
+	Add sj_window_set_title().
+
+	* src/sj-play.c:
+	Use set_title() albeit in a crap manner, and show errors in a crap
+	manner.
+
+2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* src/sj-play.c: (setup):
 	  Set device.
 
